--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -1,4 +1,20 @@
-<!DOCTYPE HTML>
-<html>
-<head></head>
-<body> YO </body>
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <meta charset="utf-8"/>
+        <title>
+            Home
+        </title>
+        <link rel="stylesheet" type="text/css" href="{% static 'dbus/index.css' %}">
+    </head>
+
+    <body>
+        <div id='menu'>This is the menu</div>
+        <div id='map'></div>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADAq7_ArNs1g_fzNE-tLB0scnM5UtXXSM" type='text/javascript'></script>
+        <script src="{% static 'dbus/gmaps.js' %}" type='text/javascript'></script>
+        <script src="{% static 'dbus/jquery-3.3.1.min.js' %}"></script>
+        <script src="{% static 'dbus/index.js' %}" type='text/javascript'></script>
+    </body>
+</html>
