--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -16,5 +16,6 @@
         <script src="{% static 'dbus/gmaps.js' %}" type='text/javascript'></script>
         <script src="{% static 'dbus/jquery-3.3.1.min.js' %}"></script>
         <script src="{% static 'dbus/index.js' %}" type='text/javascript'></script>
+    {% load static %}
     </body>
 </html>
