--- a/dublin_bus/dbus/static/dbus/index.css
+++ b/dublin_bus/dbus/static/dbus/index.css
@@ -1,16 +1,39 @@
+body {
+  min-height: 2000px;
+}
+
+.navbar-static-top {
+  margin-bottom: 25px;
+}
+
 #map {
-	height: 50%;
-	width: 50%;
+    height: 400px;
+    
+}
+
+.jumbotron  {
+    padding-top: 50px;
+  padding-bottom: 20px;
+    height: 400px;
+    
+}
+.jumbotron text-center col-md-6 {
+    padding-top: 50px;
+  padding-bottom: 20px;
+    height: 400px;
 
 }
 
-html, body {
-    height: 100%;
-    margin: 0;
-    padding:0;
+.form-horizontal {
+
 }
 
-#menu {
-    padding: 50px;
-    display: None;
+.form-group {
+    padding-top: 10px;
+    width: 300px;
+    
+    
 }
+/* .container{
+    display: flex
+} */
