--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -1,18 +1,73 @@
 {% load static %}
-
 <!DOCTYPE html>
-
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <title>
-            Home
-        </title>
-        <link rel="stylesheet" type="text/css" href="{% static 'dbus/index.css' %}">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>Bus App</title>
+
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="{% static 'dbus/index.css' %}">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      
     </head>
-    <body>
-        <div id='menu'></div>
-        <div id='map'></div>
+
+
+  <body>
+
+    <!-- Static navbar -->
+    <nav class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Bus App</a>
+        </div>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="./">get there on time<span class="sr-only">(current)</span></a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+    </nav>
+
+
+    <div class="container">
+
+    <div class="jumbotron text-center col-md-6">
+        <form class="form-horizontal">
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="from"> From:</label>
+            <div class="col-sm-10">
+            <input type="email" class="form-control" id="from" placeholder="Enter bus stop">
+            </div>
+            </div>
+              <div class="form-group">
+    <label class="control-label col-sm-2" for="to">To:</label>
+    <div class="col-sm-10"> 
+      <input type="to" class="form-control" id="to" placeholder="Enter destination">
+    </div>
+  </div>
+            <div class="form-group">
+    <label class="control-label col-sm-2" for="When">When:</label>
+    <div class="col-sm-10"> 
+      <input type="when" class="form-control" id="when" placeholder="Leave now">
+    </div>
+  </div>
+              <div class="form-group"> 
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="go" class="btn btn-default">Go</button>
+    </div>
+  </div>
+        </form>
+        </div>
+      <!-- Main component for a primary marketing message or call to action -->
+      <div id='map' class="jumbotron text-center col-md-6">
+        
+        
 	<script src="{% static 'dbus/markerclusterer.js' %}"></script>
         <!--<script src="{% static 'dbus/gmaps.js' %}" type='text/javascript'></script>-->
         <script src="{% static 'dbus/jquery-3.3.1.min.js' %}"></script>
@@ -31,20 +86,16 @@
 		});
 	{% endfor %}
 	*/
-
 function initMap(){
 var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 10,
           center: {lat: 53.3498, lng: -6.2603}
         });
-
 markers = [];
-
  {% for item in contents %}
                 var name = "{{item.stop_name}}"
                 var latitude = "{{item.latitude}}"
                 var longitude = "{{item.longitude}}"
-
                 var marker = new google.maps.Marker({
                         position: {lat: Number(latitude), lng: Number(longitude)},
                         map: map,
@@ -52,8 +103,6 @@ markers = [];
                 });
                 markers.push(marker);
         {% endfor %}
-
-
         var markerCluster = new MarkerClusterer(map, markers,
             {imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'});
 }
@@ -61,5 +110,10 @@ markers = [];
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADAq7_ArNs1g_fzNE-tLB0scnM5UtXXSM&callback=initMap" type = 'text/javascript'></script>
 	<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
     </script>   
- </body>
+
+      </div>
+    </div> <!-- /container -->
+    
+  </body>
 </html>
+
