--- a/dublin_bus/dbus/static/dbus/index.css
+++ b/dublin_bus/dbus/static/dbus/index.css
@@ -7,33 +7,30 @@ body {
 }
 
 #map {
-    height: 400px;
+    height: 500px;
     
 }
 
 .jumbotron  {
     padding-top: 50px;
   padding-bottom: 20px;
-    height: 400px;
+    height: 500px;
     
 }
 .jumbotron text-center col-md-6 {
     padding-top: 50px;
   padding-bottom: 20px;
-    height: 400px;
+    height: 500px;
 
 }
 
-.form-horizontal {
-
-}
 
 .form-group {
     padding-top: 10px;
     width: 300px;
     
-    
 }
-/* .container{
-    display: flex
-} */
+
+.form-horizontal {
+    width: 600px;
+}
