--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -138,7 +138,7 @@ var map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: 53.3498, lng: -6.2603}
         });
 markers = [];
- {% for item in contents %}
+ {% for item in stops %}
                 var name = "{{item.stop_name}}"
                 var latitude = "{{item.latitude}}"
                 var longitude = "{{item.longitude}}"
