--- a/dublin_bus/dbus/templates/dbus/result.html
+++ b/dublin_bus/dbus/templates/dbus/result.html
@@ -57,7 +57,7 @@
         </form>
 
       
-        <div test><p>You have a result</p></div>
+        <div test><p>result: {{ result }}</p></div>
             
             <!-- https://eonasdan.github.io/bootstrap-datetimepicker/ -->
               <div class="form-group"> 
@@ -154,7 +154,7 @@ var map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: 53.3498, lng: -6.2603}
         });
 markers = [];
- {% for item in contents %}
+ {% for item in stops %}
                 var name = "{{item.stop_name}}"
                 var latitude = "{{item.latitude}}"
                 var longitude = "{{item.longitude}}"
