cleaned up result output

--- a/dublin_bus/dbus/templates/dbus/result.html
+++ b/dublin_bus/dbus/templates/dbus/result.html
@@ -59,7 +59,7 @@
 
       
        
-            <div class="results"><div test><p>Your estimated journey time is: {{ result }} seconds </p> </div></div>
+            <div class="results"><div test><p>Your estimated journey time is: {{ result }}</p> </div></div>
             <!-- https://eonasdan.github.io/bootstrap-datetimepicker/ -->
         </div>
        
