My first commit

--- a/dublin_bus/dbus/static/dbus/index.css
+++ b/dublin_bus/dbus/static/dbus/index.css
@@ -88,3 +88,18 @@ padding-left: 15px;
     margin-left: -10px;
 
 }
+
+#weather {
+  width:400px;
+  height: 150px;
+}
+#leftBox {
+  float:left;
+  background: #64BAE3;
+  border-radius: 100px 0 0 0;
+}
+#rightBox {
+  float:right;
+  background: #FD3AB7;
+  border-radius:0 0 100px 0;
+}
